<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.addmood.MoodInputFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rounded_corners">

                <!-- Заголовок -->
                <TextView
                    android:id="@+id/mood_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mood_select_label"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"/>

                <!-- Выбор смайликов -->
                <LinearLayout
                    android:id="@+id/mood_emoji_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/mood_1"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/mood_1"
                            android:background="@drawable/mood_selector_bg"
                            android:contentDescription="@string/mood_1_desc"
                            android:padding="3dp"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mood_1_short"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/mood_2"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/mood_2"
                            android:background="@drawable/mood_selector_bg"
                            android:contentDescription="@string/mood_2_desc"
                            android:padding="3dp"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mood_2_short"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/mood_3"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/mood_3"
                            android:background="@drawable/mood_selector_bg"
                            android:contentDescription="@string/mood_3_desc"
                            android:padding="3dp"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mood_3_short"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/mood_4"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/mood_4"
                            android:background="@drawable/mood_selector_bg"
                            android:contentDescription="@string/mood_4_desc"
                            android:padding="3dp"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mood_4_short"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/mood_5"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/mood_5"
                            android:background="@drawable/mood_selector_bg"
                            android:contentDescription="@string/mood_5_desc"
                            android:padding="3dp"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mood_5_short"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:gravity="center"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/mood_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="13sp"
                    android:visibility="gone"
                    android:layout_gravity="center"/>

                <!-- Выбор момента -->
                <RadioGroup
                    android:id="@+id/moment_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp">

                    <RadioButton
                        android:id="@+id/moment_before"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mood_moment_before"
                        android:buttonTint="@color/dark_beige"
                        android:textColor="@color/black"
                        android:layout_marginEnd="24dp"/>

                    <RadioButton
                        android:id="@+id/moment_after"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mood_moment_after"
                        android:buttonTint="@color/dark_beige"
                        android:textColor="@color/black"/>
                </RadioGroup>

                <TextView
                    android:id="@+id/moment_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="13sp"
                    android:visibility="gone"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:id="@+id/linked_coffee_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_corners_white"
                    android:padding="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/linked_coffee_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mood_linked_coffee_label"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:id="@+id/linked_coffee_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?android:attr/selectableItemBackground">

                        <TextView
                            android:id="@+id/linked_coffee_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/mood_linked_coffee_choose"
                            android:textSize="15sp"
                            android:textColor="@color/gray"/>

                        <ImageView
                            android:id="@+id/linked_coffee_arrow"
                            android:layout_marginStart="5dp"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_arrow_right"
                            android:contentDescription="@string/mood_select"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/linked_coffee_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"
                        android:textSize="13sp"
                        android:visibility="gone"
                        android:layout_marginTop="2dp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rounded_corners"
                android:layout_marginTop="10dp">

                <!-- Дата и время -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/time_input"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/rounded_corners_white"
                            android:focusable="false"
                            android:cursorVisible="false"
                            android:clickable="true"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp" />
                        <TextView
                            android:id="@+id/time_error"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/red"
                            android:textSize="13sp"
                            android:visibility="gone"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/date_input"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/rounded_corners_white"
                            android:focusable="false"
                            android:cursorVisible="false"
                            android:clickable="true"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp" />
                        <TextView
                            android:id="@+id/date_error"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/red"
                            android:textSize="13sp"
                            android:visibility="gone"/>
                    </LinearLayout>
                </LinearLayout>

                <!-- Комментарий -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comment"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/comment_input"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/rounded_corners_white"
                        android:inputType="textMultiLine|textCapSentences"
                        android:maxLength="200"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:layout_marginBottom="10dp"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/dark_beige"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>